# TAPL

./: README  tapl.cabal
src/: Main.hs
src/TAPL/: Core.hs  Parser.hs  Support.hs
test/: test1.f
